<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aston_intensive_2</string>
    <string name="challenge1_1_tv_congratulation">Happy Birthday to Alexey</string>
    <string name="challenge1_1_btn_show_screen_label" tools:ignore="Typos">Challenge1_1</string>
    <string name="homework1_1_btn_show_screen_label" tools:ignore="Typos">Homework1_1</string>
    <string name="homework1_1_text" tools:ignore="Typos">Homework1_1</string>
    <string name="challenge1_2a_btn_label_count">Count</string>
    <string name="challenge1_2a_btn_label_toast">Toast</string>
    <string name="challenge1_2a_count_initial_value">0</string>
    <string name="challenge1_2a_toast_message">Hello Toast!</string>
    <string name="challenge1_2a_btn_show_screen_label" tools:ignore="Typos">Challenge1_2a</string>
    <string name="challenge1_2b_btn_show_label" tools:ignore="Typos">Challenge1_2b</string>
    <string name="homework1_2b_btn_show_screen_label" tools:ignore="Typos">Homework1_2b</string>
    <string name="homework1_2b_btn_label_zero">Zero</string>
    <string name="challenge1_3_btn_show_screen_label" tools:ignore="Typos">Challenge1_3</string>
    <string name="challenge1_3_article_title">Beatles Anthology Vol. 1</string>
    <string name="challenge1_3_article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="challenge1_3_article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
\n\n
This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
\n\n
<b>Highlights include:</b>
\n\n
<b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
\n\n
<b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
\n\n
<b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
\n\n
<b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
\n\n
<b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
\n\n
<b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
\n\n
<b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
</string>
    <string name="challenge1_3_btn_add_comment_label">Add comment</string>
    <string name="homework1_3_btn_show_screen_label" tools:ignore="Typos">Homework1_3</string>
    <string name="homework1_4_btn_show_screen_label" tools:ignore="Typos">Homework1_4</string>
    <string name="homework1_4_message">Launcher icon has been changed</string>
    <string name="challenge2_1_btn_show_screen_label">Challenge2_1</string>
    <string name="challenge2_1_btn_text_one_label">Text One</string>
    <string name="challenge2_1_btn_two_label">Text two</string>
    <string name="challenge2_1_btn_three_label">Text three</string>
    <string name="challenge2_1_text_one">Для вас, души моей царицы,\n
Красавицы, для вас одних\n
Времен минувших небылицы,\n
В часы досугов золотых,\n
Под шепот старины болтливой,\n
Рукою верной я писал;\n
Примите ж вы мой труд игривый!\n
Ничьих не требуя похвал,\n
Счастлив уж я надеждой сладкой,\n
Что дева с трепетом любви\n
Посмотрит, может быть украдкой,\n
На песни грешные мои.\n
У лукоморья дуб зеленый;\n
Златая цепь на дубе том:\n
И днем и ночью кот ученый\n
Все ходит по цепи кругом;\n
Идет направо - песнь заводит,\n
Налево - сказку говорит.\n
    </string>
    <string name="challenge2_1_text_two">Там чудеса: там леший бродит,\n
Русалка на ветвях сидит;\n
Там на неведомых дорожках\n
Следы невиданных зверей;\n
Избушка там на курьих ножках\n
Стоит без окон, без дверей;\n
Там лес и дол видений полны;\n
Там о заре прихлынут волны\n
На брег песчаный и пустой,\n
И тридцать витязей прекрасных\n
Чредой из вод выходят ясных,\n
И с ними дядька их морской;\n
Там королевич мимоходом\n
Пленяет грозного царя;\n
Там в облаках перед народом\n
Через леса, через моря\n
Колдун несет богатыря;\n
В темнице там царевна тужит,\n
А бурый волк ей верно служит;\n
Там ступа с Бабою Ягой\n
Идет, бредет сама собой;\n
Там царь Кащей над златом чахнет;\n
Там русской дух… там Русью пахнет!\n
И там я был, и мед я пил;\n
У моря видел дуб зеленый;\n
Под ним сидел, и кот ученый\n
Свои мне сказки говорил.\n
Одну я помню: сказку эту\n
Поведаю теперь я свету…\n
    </string>
    <string name="challenge2_1_text_three">Дела давно минувших дней,\n
Преданья старины глубокой.\n
В толпе могучих сыновей,\n
С друзьями, в гриднице высокой\n
Владимир-солнце пировал;\n
Меньшую дочь он выдавал\n
За князя храброго Руслана\n
И мед из тяжкого стакана\n
За их здоровье выпивал.\n
Не скоро ели предки наши,\n
Не скоро двигались кругом\n
Ковши, серебряные чаши\n
С кипящим пивом и вином.\n
Они веселье в сердце лили,\n
Шипела пена по краям,\n
Их важно чашники носили\n
И низко кланялись гостям.\n
    </string>
    <string name="homework2_1_btn_show_screen_label">Homework2_1</string>
    <string name="homework2_1_btn_hello_label">Say hello</string>
    <string name="homework2_1_text_hello">Hello!</string>
    <string name="homework2_2_btn_count_label">Count</string>
    <string name="homework2_2_et_hint">Enter your text</string>
    <string name="homework2_2_btn_show_screen_label">Homework2_2</string>
    <string name="homework2_2_initial_value">0</string>
    <string name="homework2_3_btn_show_screen_label">Homework2_3</string>
    <string name="homework2_2_btn_take_picture_label">Take a picture</string>
    <string name="homework2_2_error_message">Fail to launch the camera app</string>
</resources>