<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge1_3.ChallengeActivity1Part3">

    <TextView
        android:id="@+id/challenge1_3_tv_article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:padding="@dimen/challenge1_3_padding_regular"
        android:text="@string/challenge1_3_article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/challenge1_3_tv_article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/challenge1_3_tv_article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/challenge1_3_padding_regular"
                android:text="@string/challenge1_3_article_subtitle"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/challenge1_3_tv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/challenge1_3_padding_regular"
                android:text="@string/challenge1_3_article_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/challenge1_3_btn_add_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:background="@drawable/gray_button_ripple"
                android:text="@string/challenge1_3_btn_add_comment_label" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
