<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homework1_2B.HomeworkActivity1Part2B">

    <Button
        android:id="@+id/homework1_2b_btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/challenge1_2a_btn_label_toast"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/homework1_2b_tv_show_count" />

    <Button
        android:id="@+id/homework1_2b_btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/homework1_2b_bg_gray"
        android:text="@string/homework1_2b_btn_label_zero"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/homework1_2b_btn_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homework1_2b_btn_toast" />

    <Button
        android:id="@+id/homework1_2b_btn_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/challenge1_2a_btn_label_count"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/homework1_2b_tv_show_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homework1_2b_tv_show_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/challenge1_2a_tv_color"
        android:gravity="center"
        android:text="@string/challenge1_2a_count_initial_value"
        android:textColor="@color/purple_500"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/homework1_2b_btn_toast"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
